fix homepage slider image bug on small device
image was too wide for viewport resulting in horizontal scroll

--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -2,12 +2,10 @@
   img {
     max-width: 640px;
     max-height: 200px;
-  }
-  @include breakpoint(small) {
-    //padding: rem-calc(65%) 0;
-    //height: rem-calc(200);
-    //position: relative;
-    //text-align: left;
+    @include breakpoint(small only) {
+      max-width: 100%;
+      height: auto;
+    }
   }
 }
 
